// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Displays an error if prescription-order not found 1`] = `
"<h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl">Error</label></h1>
<div class="nhsuk-error-summary">
  <h2 class="nhsuk-error-summary__title">Something went wrong while processing your request:</h2>
  <div class="nhsuk-error-summary__body">Unexpected response from server.</div>
</div>
<fieldset class="nhsuk-fieldset">
  <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m">Request Details</legend>
  <dl class="nhsuk-summary-list">
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Method</dt>
      <dd class="nhsuk-summary-list__value">GET</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">URL</dt>
      <dd class="nhsuk-summary-list__value">baseUrl/dispense/release/7A9089-A83008-56A03J</dd>
    </div>
  </dl>
  <details class="nhsuk-details nhsuk-expander">
    <summary class="nhsuk-details__summary"><span class="nhsuk-details__summary-text">Request Headers</span></summary>
    <div class="nhsuk-details__text">
      <div class="sc-eqUzNf chXQhu"><button class="nhsuk-button sc-iGgVNO cEsNDy" aria-disabled="false" type="submit">Copy</button><a class="nhsuk-button sc-iGgVNO cEsNDy" role="button" aria-disabled="false" draggable="false" href="data:text/xml;charset=utf-8,%7B%0A%20%20%22Accept%22%3A%20%22application%2Fjson%2C%20text%2Fplain%2C%20*%2F*%22%0A%7D" download="message">Download</a></div><pre class="sc-dcJtft jyMVel">{
  "Accept": "application/json, text/plain, */*"
}</pre>
    </div>
  </details>
</fieldset>
<fieldset class="nhsuk-fieldset">
  <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m">Response Details</legend>
  <dl class="nhsuk-summary-list">
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Status</dt>
      <dd class="nhsuk-summary-list__value">200 undefined</dd>
    </div>
  </dl>
  <details class="nhsuk-details nhsuk-expander">
    <summary class="nhsuk-details__summary"><span class="nhsuk-details__summary-text">Response Headers</span></summary>
    <div class="nhsuk-details__text">
      <div class="sc-eqUzNf chXQhu"><button class="nhsuk-button sc-iGgVNO cEsNDy" aria-disabled="false" type="submit">Copy</button><a class="nhsuk-button sc-iGgVNO cEsNDy" role="button" aria-disabled="false" draggable="false" href="data:text/xml;charset=utf-8,%7B%7D" download="message">Download</a></div><pre class="sc-dcJtft jyMVel">{}</pre>
    </div>
  </details>
</fieldset>
<div class="sc-eqUzNf chXQhu"><button class="nhsuk-button nhsuk-button--secondary" aria-disabled="false" type="button">Back</button></div>"
`;

exports[`Displays an error on invalid response 1`] = `
"<h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl">Error</label></h1>
<div class="nhsuk-error-summary">
  <h2 class="nhsuk-error-summary__title">Something went wrong while processing your request:</h2>
  <div class="nhsuk-error-summary__body">Unexpected response from server.</div>
</div>
<fieldset class="nhsuk-fieldset">
  <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m">Request Details</legend>
  <dl class="nhsuk-summary-list">
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Method</dt>
      <dd class="nhsuk-summary-list__value">GET</dd>
    </div>
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">URL</dt>
      <dd class="nhsuk-summary-list__value">baseUrl/dispense/release/7A9089-A83008-56A03J</dd>
    </div>
  </dl>
  <details class="nhsuk-details nhsuk-expander">
    <summary class="nhsuk-details__summary"><span class="nhsuk-details__summary-text">Request Headers</span></summary>
    <div class="nhsuk-details__text">
      <div class="sc-eqUzNf chXQhu"><button class="nhsuk-button sc-iGgVNO cEsNDy" aria-disabled="false" type="submit">Copy</button><a class="nhsuk-button sc-iGgVNO cEsNDy" role="button" aria-disabled="false" draggable="false" href="data:text/xml;charset=utf-8,%7B%0A%20%20%22Accept%22%3A%20%22application%2Fjson%2C%20text%2Fplain%2C%20*%2F*%22%0A%7D" download="message">Download</a></div><pre class="sc-dcJtft jyMVel">{
  "Accept": "application/json, text/plain, */*"
}</pre>
    </div>
  </details>
</fieldset>
<fieldset class="nhsuk-fieldset">
  <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m">Response Details</legend>
  <dl class="nhsuk-summary-list">
    <div class="nhsuk-summary-list__row">
      <dt class="nhsuk-summary-list__key">Status</dt>
      <dd class="nhsuk-summary-list__value">500 undefined</dd>
    </div>
  </dl>
  <details class="nhsuk-details nhsuk-expander">
    <summary class="nhsuk-details__summary"><span class="nhsuk-details__summary-text">Response Headers</span></summary>
    <div class="nhsuk-details__text">
      <div class="sc-eqUzNf chXQhu"><button class="nhsuk-button sc-iGgVNO cEsNDy" aria-disabled="false" type="submit">Copy</button><a class="nhsuk-button sc-iGgVNO cEsNDy" role="button" aria-disabled="false" draggable="false" href="data:text/xml;charset=utf-8,%7B%7D" download="message">Download</a></div><pre class="sc-dcJtft jyMVel">{}</pre>
    </div>
  </details>
  <details class="nhsuk-details nhsuk-expander">
    <summary class="nhsuk-details__summary"><span class="nhsuk-details__summary-text">Response Body</span></summary>
    <div class="nhsuk-details__text">
      <div class="sc-eqUzNf chXQhu"><button class="nhsuk-button sc-iGgVNO cEsNDy" aria-disabled="false" type="submit">Copy</button><a class="nhsuk-button sc-iGgVNO cEsNDy" role="button" aria-disabled="false" draggable="false" href="data:text/xml;charset=utf-8,%7B%7D" download="message">Download</a></div><pre class="sc-dcJtft jyMVel">{}</pre>
    </div>
  </details>
</fieldset>
<div class="sc-eqUzNf chXQhu"><button class="nhsuk-button nhsuk-button--secondary" aria-disabled="false" type="button">Back</button></div>"
`;

exports[`Displays dispense form if prescription details are retrieved successfully (no previous dispense notification) 1`] = `""`;

exports[`Displays dispense form if prescription details are retrieved successfully (previous dispense notifications) 1`] = `""`;

exports[`Displays dispense result 1`] = `""`;

exports[`Displays loading text while dispense notification is being submitted 1`] = `""`;

exports[`Displays loading text while prescription data is being requested 1`] = `
"<div style="text-align: center;">
  <h1 class="nhsuk-label-wrapper"><label class="nhsuk-label nhsuk-label--xl sc-gsFSjX exKTSW">Loading</label></h1>
  <div class="nhsuk-loader"><span class="nhsuk-loader__spinner"></span><span class="nhsuk-loader__text">Retrieving prescription details.</span></div>
</div>"
`;
